tests/custom-5.4.2/compliant/configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: compliant-cm
  annotations:
    private-endpoint: "enabled"
