tests/custom-5.4.2/compliant/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: custom-5.4.2-compliant
policies:
  - ../../../kyverno-policies/custom-5.4.2.yaml
resources:
  - configmap.yaml
results:
  - policy: custom-5-4-2-private-endpoint
    rule: check-private-endpoint
    resources:
      - compliant-cm
    kind: ConfigMap
    result: pass
